--- a/BorusanLogisticsGuzergah/BorusanLogisticsGuzergah.csproj
+++ b/BorusanLogisticsGuzergah/BorusanLogisticsGuzergah.csproj
@@ -58,10 +58,25 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MenuWayPoints.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MenuWayPoints.Designer.cs">
+      <DependentUpon>MenuWayPoints.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WayPointsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WayPointsForm.Designer.cs">
+      <DependentUpon>WayPointsForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuWayPoints.resx">
+      <DependentUpon>MenuWayPoints.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
