--- a/BorusanLogisticsGuzergah/BorusanLogisticsGuzergah.csproj
+++ b/BorusanLogisticsGuzergah/BorusanLogisticsGuzergah.csproj
@@ -44,6 +44,7 @@
     <Reference Include="DevExpress.XtraGrid.v18.2, Version=18.2.15.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraLayout.v18.2, Version=18.2.15.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraMap.v18.2, Version=18.2.15.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraNavBar.v18.2, Version=18.2.15.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraPrinting.v18.2, Version=18.2.15.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -84,6 +85,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProposedRoute5Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProposedRoute5Form.Designer.cs">
+      <DependentUpon>ProposedRoute5Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProposedRouteForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -137,6 +144,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ProposedRoute5Form.resx">
+      <DependentUpon>ProposedRoute5Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ProposedRouteForm.resx">
       <DependentUpon>ProposedRouteForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -182,6 +192,7 @@
     <Content Include="Image\4.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Logo.ico" />
     <None Include="Resources\4.png" />
     <None Include="Resources\3.png" />
     <None Include="Resources\2.png" />
